--- a/templates/main.html
+++ b/templates/main.html
@@ -4,38 +4,282 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather APP</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <style>
+        .card {
+            transition: transform 0.3s;
+        }
+        .card:hover {
+            transform: translateY(-5px);
+        }
+        .card-footer {
+            background-color: #f8f9fa;
+            border-top: 1px solid #dee2e6;
+        }
+        .navbar-brand {
+            font-weight: bold;
+        }
+        .navbar-nav .nav-link {
+            font-size: 1.1rem;
+            color: #333;
+            transition: color 0.3s;
+            position: relative;
+            padding-right: 15px;
+        }
+        .navbar-nav .nav-link:not(:last-child)::after {
+            content: "";
+            position: absolute;
+            top: 50%;
+            right: 0;
+            transform: translateY(-50%);
+            width: 1px;
+            height: 20px;
+            background-color: #ccc;
+        }
+        .navbar-nav .nav-link:hover {
+            color: #007bff;
+        }
+        .navbar {
+            padding-top: 0.5rem;
+            padding-bottom: 0.5rem;
+        }
+        .container {
+            max-width: 1200px;
+        }
+        .modal-content {
+            border-radius: 10px;
+        }
+        .modal-title {
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-            <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
-            <span class="fs-4">Weather APP: Stay Ahead, Rain or Shine: Your Forecast, Your Way!</span>
-        </a>
-
-        <ul class="nav nav-pills">
-            <li class="nav-item"><a href="{% url 'Weather Generate' %}" class="nav-link">Generate</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Reset</a></li>
-        </ul>
+    <header class="bg-light border-bottom">
+        <div class="container">
+            <nav class="navbar navbar-light">
+                <a class="navbar-brand" href="{% url 'weather-view' %}">Weather APP</a>
+                <ul class="navbar-nav flex-row">
+                    <li class="nav-item me-2">
+                        <a class="nav-link" href="#" id="add-weather-data">Add Data</a>
+                    </li>
+                    <li class="nav-item me-2">
+                        <a class="nav-link" href="#" id="generate-weather-data">Generate</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'weather-reset' %}" id="reset-link">Reset</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
-        <div class="container">
-            {% block content %}
-
-            {% endblock %}
+        <div class="container mt-4">
+            <h1 class="text-center mb-4">Temperaturas</h1>
+            <!-- Formulário de Filtro -->
+            <form id="filter-form" class="mb-4">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Digite o nome da cidade" id="city-filter">
+                    <button type="submit" class="btn btn-primary">Filtrar</button>
+                </div>
+            </form>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                {% for weather in weathers %}
+                <div class="col">
+                    <div class="card h-100 border rounded shadow-sm">
+                        <div class="card-header bg-primary text-white text-center">
+                            <h5 class="card-title mb-0">Temperatura: {{ weather.temperature }}°C</h5>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">
+                                <strong>Data:</strong> {{ weather.date|date:"d/m/Y" }} às {{ weather.date|date:"H\hi" }} <br>                                <strong>Cidade:</strong> {{ weather.city }} <br>
+                                <strong>Pressão Atmosférica:</strong> {{ weather.atmospheric_pressure }} <br>
+                                <strong>Umidade:</strong> {{ weather.humidity }} <br>
+                                <strong>Condição do Tempo:</strong> {{ weather.weather }}
+                            </p>
+                        </div>
+                        <div class="card-footer text-muted small text-center">
+                            <small>Última atualização: {{ weather.last_updated|date:"d/m/Y \à\s H\hi" }}</small>
+                            <div class="d-flex justify-content-center mt-2">
+                                <button type="button" class="btn btn-primary btn-sm me-2" onclick="openUpdateModal('{{ weather.uuid }}')">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                                        <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                                        <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
+                                    </svg>                                    
+                                </button>
+                                <form action="{% url 'weather-delete' uuid=weather.uuid %}" method="post">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-danger btn-sm">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+                                            <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5"/>
+                                        </svg>
+                                    </button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
         </div>
     </main>
+    <!-- Modal de Adição -->
+    <div class="modal fade" id="addWeatherDataModal" tabindex="-1" aria-labelledby="addWeatherDataModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="addWeatherDataModalLabel">Add Weather Data</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="weather-form" action="{% url 'weather-create' %}" method="post">
+                        {% csrf_token %}
+                        <div class="mb-3">
+                            <label for="temperature" class="form-label">Temperature</label>
+                            <input type="number" class="form-control" id="temperature" name="temperature" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="date" class="form-label">Date</label>
+                            <input type="date" class="form-control" id="date" name="date" required value="{{ weather.date|date:'Y-m-d' }}">
+                        </div>
+                        <div class="mb-3">
+                            <label for="city" class="form-label">Cidade</label>
+                            <input type="text" class="form-control" id="city" name="city" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="atmospheric_pressure" class="form-label">Pressão Atmosférica</label>
+                            <input type="number" class="form-control" id="atmospheric_pressure" name="atmospheric_pressure">
+                        </div>
+                        <div class="mb-3">
+                            <label for="humidity" class="form-label">Umidade</label>
+                            <input type="number" class="form-control" id="humidity" name="humidity">
+                        </div>
+                        <div class="mb-3">
+                            <label for="weather" class="form-label">Condição do Tempo</label>
+                            <input type="text" class="form-control" id="weather" name="weather">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
-      
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-      crossorigin="anonymous"
-    ></script>
+    <!-- Modal de Atualização -->
+    <div class="modal fade" id="updateWeatherModal" tabindex="-1" aria-labelledby="updateWeatherModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="updateWeatherModalLabel">Atualizar Dados Meteorológicos</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- Formulário de atualização -->
+                    <form id="update-form" action="{% url 'weather-update' uuid='uuid_placeholder' %}" method="post">
+                        {% csrf_token %}
+                        <div class="mb-3">
+                            <label for="temperature" class="form-label">Temperature</label>
+                            <input type="number" class="form-control" id="temperature" name="temperature">
+                        </div>
+                        <div class="mb-3">
+                            <label for="date" class="form-label">Date</label>
+                            <input type="date" class="form-control" id="date" name="date" value="{{ weather.date|date:'Y-m-d' }}">
+                        </div>
+                        <div class="mb-3">
+                            <label for="city" class="form-label">Cidade</label>
+                            <input type="text" class="form-control" id="city" name="city">
+                        </div>
+                        <div class="mb-3">
+                            <label for="atmospheric_pressure" class="form-label">Pressão Atmosférica</label>
+                            <input type="number" class="form-control" id="atmospheric_pressure" name="atmospheric_pressure">
+                        </div>
+                        <div class="mb-3">
+                            <label for="humidity" class="form-label">Umidade</label>
+                            <input type="number" class="form-control" id="humidity" name="humidity">
+                        </div>
+                        <div class="mb-3">
+                            <label for="weather" class="form-label">Condição do Tempo</label>
+                            <input type="text" class="form-control" id="weather" name="weather">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Atualizar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        // Função para abrir o modal de atualização
+        function openUpdateModal(uuid) {
+            var modal = new bootstrap.Modal(document.getElementById('updateWeatherModal'));
+            modal.show();
+            // Atualize o action do formulário com o UUID correto
+            var form = document.getElementById('update-form');
+            form.action = form.action.replace('uuid_placeholder', uuid);
+        }
+
+        document.getElementById('reset-link').addEventListener('click', function(event) {
+            event.preventDefault();
+            fetch("{% url 'weather-reset' %}", {
+                method: 'POST',
+                headers: {
+                    'X-CSRFToken': '{{ csrf_token }}'
+                }
+            }).then(function(response) {
+                if (response.redirected) {
+                    window.location.href = response.url;
+                }
+            });
+        });
+
+        // Abrir modal ao clicar no botão "Add Weather Data"
+        document.getElementById('add-weather-data').addEventListener('click', function(event) {
+            event.preventDefault();
+            var myModal = new bootstrap.Modal(document.getElementById('addWeatherDataModal'));
+            myModal.show();
+        });
+
+        // Enviar formulário via AJAX
+        document.getElementById('weather-form').addEventListener('submit', function(event) {
+            event.preventDefault();
+            var form = this;
+            var formData = new FormData(form);
+            fetch(form.action, {
+                method: form.method,
+                body: formData,
+                headers: {
+                    'X-CSRFToken': '{{ csrf_token }}'
+                }
+            }).then(function(response) {
+                if (response.redirected) {
+                    window.location.href = response.url;
+                }
+            });
+        });
+
+        // Gerar dados meteorológicos
+        document.getElementById('generate-weather-data').addEventListener('click', function(event) {
+            event.preventDefault();
+            fetch("{% url 'weather-generate' %}", {
+                method: 'GET'
+            }).then(function(response) {
+                if (response.redirected) {
+                    window.location.href = response.url;
+                }
+            });
+        });
+
+        // Lidar com a submissão do formulário de filtro via AJAX
+        document.getElementById('filter-form').addEventListener('submit', function(event) {
+            event.preventDefault();
+            var city = document.getElementById('city-filter').value;
+            fetch("{% url 'weather-view' %}?city=" + encodeURIComponent(city))
+                .then(response => response.text())
+                .then(data => {
+                    document.body.innerHTML = data;
+                });
+        });
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
